# react-native-pocketsphinx

./: NitroPocketSphinx.podspec  PocketSphinx.podspec  Pocketsphinx.podspec  README.md  nitro.json  package.json
.github/workflows/: android-build.yml  ios-build.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/pocketsphinx/: NitroPocketSphinxPackage.java  PocketsphinxPackage.java
cpp/: HybridPocketSphinx.cpp  HybridPocketSphinx.hpp  HybridPocketsphinx.cpp  HybridPocketsphinx.hpp
cpp/libpocketsphinx/pocketsphinx/: prim_type.h
example/: App.tsx  app.json  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/pocketsphinxexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile  link-assets-manifest.json
example/ios/PocketsphinxExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/PocketsphinxExample.xcodeproj/: project.pbxproj
example/ios/PocketsphinxExample.xcodeproj/xcshareddata/xcschemes/: PocketsphinxExample.xcscheme
example/ios/PocketsphinxExample.xcworkspace/: contents.xcworkspacedata
ios/: Bridge.h
ios/libpocketsphinx.xcframework/: Info.plist
scripts/: clang-format.sh
src/: index.ts
src/specs/: PocketSphinx.nitro.ts  pocketsphinx.nitro.ts
